exports[`Collection component should match the previous snapshot 1`] = `
<div>
  <div
    className="panel panel-default"
    id={undefined}>
    <div
      className="panel-heading">
      <h1
        className="panel-title" />
    </div>
    <div
      className="panel-body">
      <li
        className="">
        <ul
          className="list-group">
          <li
            className="list-group-item">
            <h4
              className="list-group-item-heading">
              www.foo.no
            </h4>
            <p
              className="list-group-item-text">
              request.url
            </p>
          </li>
        </ul>
      </li>
    </div>
  </div>
</div>
`;

exports[`Collections component should match the previous snapshot 1`] = `
<div
  className="panel panel-default"
  id={undefined}>
  <div
    className="panel-heading">
    <span
      className="clearfix pull-right">
      <button
        onClick={[Function]}>
        Add new collection
      </button>
    </span>
  </div>
  <div
    className="panel-body">
    <span>
      <div>
        <div
          className="panel panel-default"
          id={undefined}>
          <div
            className="panel-heading">
            <h1
              className="panel-title">
              Collection
            </h1>
          </div>
          <div
            className="panel-body">
            <li
              className="">
              <ul
                className="list-group">
                <li
                  className="list-group-item">
                  <h4
                    className="list-group-item-heading">
                    www.foo.no
                  </h4>
                  <p
                    className="list-group-item-text">
                    request.url
                  </p>
                </li>
              </ul>
            </li>
          </div>
        </div>
      </div>
      <div>
        <div
          className="panel panel-default"
          id={undefined}>
          <div
            className="panel-heading">
            <h1
              className="panel-title">
              Collection 2
            </h1>
          </div>
          <div
            className="panel-body">
            <li
              className="">
              <ul
                className="list-group">
                <li
                  className="list-group-item">
                  <h4
                    className="list-group-item-heading">
                    www.foo.no
                  </h4>
                  <p
                    className="list-group-item-text">
                    request.url
                  </p>
                </li>
              </ul>
            </li>
            <li
              className="">
              <ul
                className="list-group">
                <li
                  className="list-group-item">
                  <h4
                    className="list-group-item-heading">
                    www.bar.no
                  </h4>
                  <p
                    className="list-group-item-text">
                    request.url
                  </p>
                </li>
              </ul>
            </li>
            <li
              className="">
              <ul
                className="list-group">
                <li
                  className="list-group-item">
                  <h4
                    className="list-group-item-heading">
                    www.baz.no
                  </h4>
                  <p
                    className="list-group-item-text">
                    request.url
                  </p>
                </li>
              </ul>
            </li>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;
